// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="_button_8mknb_1"
          type="button"
  >
    <span class="_flagWrapper_8mknb_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_8mknb_21">
      Bokmål
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithAriaCurrent play-test 1`] = `
<div data-test-block="true">
  <button class="_buttonCurrent_8mknb_25 _button_8mknb_1"
          aria-current="true"
          type="button"
  >
    <span class="_flagWrapper_8mknb_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_8mknb_21">
      Bokmål
    </span>
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlid"
          class="_button_8mknb_1 dummyClassname"
          lang="nb"
          data-testid="123ID"
          type="button"
  >
    <span class="_flagWrapper_8mknb_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_8mknb_21">
      Bokmål
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="_button_8mknb_1"
          type="button"
  >
    <span class="_flagWrapper_8mknb_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_8mknb_21">
      Blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPickerButton (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_8mknb_1"
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <span class="_flagWrapper_8mknb_15">
      <svg xmlns="http://www.w3.org/2000/svg"
           aria-hidden="true"
           viewbox="0 0 1100 800"
      >
        <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
              style="fill: rgb(255, 255, 255);"
        >
        </path>
        <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
              style="fill: rgb(239, 43, 45);"
        >
        </path>
        <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
              style="fill: rgb(0, 40, 104);"
        >
        </path>
      </svg>
    </span>
    <span class="_buttonText_8mknb_21">
      Bokmål
    </span>
  </button>
</div>
`;
